fix GridJavaProcess#exec